--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ project_requirements.png
 project_rubric.png
 
 #DB Password file
-postgres_key.py
+#postgres_key.py
 
 # python stuff from github's python .gitignore template
 # https://github.com/github/gitignore/blob/main/Python.gitignore
